--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
         "url": "http://matt.crook.nz/"
     },
     "license": "UNLICENSED",
+    "dependencies": {
+        "sql.js": "~0.4.0",
+        "jquery": "^2.1.4"
+    },
     "devDependencies": {
         "electron": "~1.6.2"
     }
