--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
-    "name": "interflare",
-    "version": "0.0.1",
-    "description": "A Social Media Management Service",
-    "main": "main.js",
-    "scripts": {
-        "start": "electron ."
-    },
-    "repository": "https://github.com/crookm/InterFlare",
-    "author": {
-        "name": "Matt Crook",
-        "email": "matt@crook.nz",
-        "url": "http://matt.crook.nz/"
-    },
-    "license": "UNLICENSED",
-    "dependencies": {
-        "sql.js": "~0.4.0",
-        "jquery": "^2.1.4"
-    },
-    "devDependencies": {
-        "electron": "~1.6.2"
+  "name": "interflare",
+  "version": "0.0.1",
+  "description": "A Social Media Management Service",
+  "main": "main.js",
+  "scripts": {
+    "start": "electron .",
+    "build": "build -mwl --x64 --ia32",
+    "build-windows": "build --windows --x64 --ia32",
+    "build-mac": "build --mac --x64 --ia32",
+    "build-linux": "build --linux --x64 --ia32"
+  },
+  "build": {
+    "appId": "nz.crook.matt.interflare",
+    "mac": {
+      "category": "public.app-category.business"
     }
+  },
+  "repository": "https://github.com/crookm/InterFlare",
+  "author": {
+    "name": "Matt Crook",
+    "email": "matt@crook.nz",
+    "url": "http://matt.crook.nz/"
+  },
+  "license": "UNLICENSED",
+  "dependencies": {
+    "sql.js": "~0.4.0",
+    "jquery": "^2.1.4"
+  },
+  "devDependencies": {
+    "electron": "~1.6.2",
+    "electron-builder": "^19.4.2"
+  }
 }
