--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   },
   "license": "UNLICENSED",
   "dependencies": {
-    "sql.js": "~0.4.0",
-    "jquery": "^2.1.4"
+    "jquery": "^2.1.4",
+    "request-promise": "^4.2.1",
+    "sql.js": "~0.4.0"
   },
   "devDependencies": {
     "electron": "~1.6.2",
